[package]
name = "quarry-merge-mine"
version = "3.0.0"
description = "Mines multiple quarries at the same time"
homepage = "https://quarry.so"
repository = "https://github.com/QuarryProtocol/quarry"
authors = ["Larry Jarry <larry@quarry.so>"]
license = "AGPL-3.0"
keywords = ["solana", "quarry"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry_merge_mine"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.22"
anchor-spl = "^0.22"
quarry-mine = { path = "../quarry-mine", features = ["cpi"], version = "3.0.0" }
quarry-mint-wrapper = { path = "../quarry-mint-wrapper", features = [
    "cpi"
], version = "3.0.0" }
num-traits = "0.2"
vipers = "^2.0"
