[package]
name = "quarry-mine"
version = "3.0.0"
description = "Distributes liquidity mining rewards to token stakers"
edition = "2021"
homepage = "https://quarry.so"
repository = "https://github.com/QuarryProtocol/quarry"
authors = ["Quarry Protocol <team@quarry.so>"]
license = "AGPL-3.0"
keywords = ["solana", "quarry"]

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry_mine"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.22"
anchor-spl = "^0.22"
num-traits = "0.2.14"
quarry-mint-wrapper = { path = "../quarry-mint-wrapper", features = [
  "cpi"
], version = "3.0.0" }
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
vipers = "^2.0"

[dev-dependencies]
proptest = { version = "1.0" }
rand = { version = "0.8.4" }
