[package]
name = "quarry-mint-wrapper"
version = "1.3.0"
description = "Mints tokens to authorized accounts"
edition = "2018"
homepage = "https://quarry.so"
repository = "https://github.com/QuarryProtocol/quarry"
authors = ["Quarry Protocol <team@quarry.so>"]
license = "AGPL-3.0"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry_mint_wrapper"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.13.2"
anchor-spl = "0.13.2"
vipers = "0.1.1"
solana-program = "1.7.8"
