[package]
name = "quarry-operator"
version = "4.2.0"
description = "Delegates Quarry Rewarder authority roles."
edition = "2021"
homepage = "https://quarry.so"
repository = "https://github.com/QuarryProtocol/quarry"
authors = ["Quarry Protocol <team@quarry.so>"]
license = "AGPL-3.0"
keywords = ["solana", "quarry"]

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry_operator"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.22, <=0.24"
anchor-spl = ">=0.22, <=0.24"
quarry-mine = { path = "../quarry-mine", version = "4.1.0", features = ["cpi"] }
vipers = "^2.0"
