[package]
name = "quarry-registry"
version = "5.1.0"
description = "Registry of all quarries associated with a rewarder."
edition = "2021"
homepage = "https://quarry.so"
repository = "https://github.com/QuarryProtocol/quarry"
authors = ["Quarry Protocol <team@quarry.so>"]
license = "AGPL-3.0"
keywords = ["solana", "quarry"]

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry_registry"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.22, <=0.24"
quarry-mine = { version = "5.0.0", path = "../quarry-mine", features = ["cpi"] }
solana-security-txt = "1.0.1"
vipers = "^2.0"
